...
    @IBOutlet weak var saveBarItem: UIBarButtonItem!

    //MARK:- life cycle
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.resetBarItem.accessibilityIdentifier = "ResetBarItem"
        self.saveBarItem.accessibilityIdentifier = "SaveBarItem"
        
        self.displayManager.delegate = self
        
        self.presenter.viewDidLoad()
    }
    
...
