...
                    <view key="view" contentMode="scaleToFill" id="2N8-mQ-Hsw">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="63D-UE-vMj">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <accessibility key="accessibilityConfiguration" identifier="IncrementButton"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="100"/>
                                <state key="normal">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="incrementActionWithSender:" destination="Eqd-JS-hRQ" eventType="touchUpInside" id="gkZ-aj-OPM"/>
...
